--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,160 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+
+@import "./app/scss/vars";
+@import "./app/scss/themes/light.scss";
+
+body {
+   margin: 0;
+   padding: 0;
+   width: 100%;
+   height: 100vh;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+   text-rendering: optimizeLegibility;
+   font-size: 1rem;
+   line-height: 1.5;
+   margin: 0;
+   padding: 0;
+   min-height: 100%;
+   position: relative;
+   overflow: hidden;
+   font-family: $secondary-font-family;
+   background-color: $surface-background;
+}
+*,
+*::before,
+*::after {
+   box-sizing: inherit;
+   text-rendering: geometricPrecision;
+   -webkit-tap-highlight-color: transparent;
+}
+h1, h2, h3, h4, h5, h6 {
+   margin: 0 0 0.625rem 0;
+   font-family: $primary-font-family;
+   color: inherit;
+}
+h1 {
+   font-size: 3rem;
+   letter-spacing: -0.066875rem;
+   line-height: 1.5;
+   font-weight: 700;
+}
+h2 {
+   font-size: 2.25rem;
+   letter-spacing: -0.020625rem;
+   font-weight: 600;
+}
+h3 {
+   font-size: 1.5rem;
+   letter-spacing: -0.029375rem;
+   font-weight: 600;
+}
+h4 {
+   font-size: 1.25rem;
+   letter-spacing: -0.020625rem;
+   font-weight: 600;
+}
+h5 {
+   font-size: 1rem;
+   letter-spacing: -0.01125rem;
+   font-weight: 600;
+}
+h6 {
+   font-size: 0.875rem;
+   letter-spacing: -0.005625rem;
+   font-weight: 600;
+}
+
+span {
+   font-size: inherit;
+   color: inherit;
+   font-weight: inherit;
+}
+p,
+small {
+   font-weight: 400;
+   color: inherit;
+   letter-spacing: -0.005625rem;
+   font-family: $secondary-font-family;
+}
+p {
+   margin-top: 0;
+   margin-bottom: 1rem;
+   font-size: 1em;
+   line-height: 1.625em;
+}
+small {
+   margin: 0;
+   line-height: 1.5;
+   font-size: 0.875rem;
+}
+b {
+   font-weight: 600;
+}
+img {
+   max-width: 100%;
+}
+
+a {
+   color: $primary;
+   outline: none;
+   cursor: pointer;
+   font-size: inherit;
+   -webkit-touch-callout: none;
+   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+   -webkit-box-align: center;
+   align-items: center;
+   text-decoration: none;
+}
+a:hover {
+   text-decoration: none;
+}
+button,
+input,
+select,
+textarea {
+   font-family: inherit;
+   font-size: inherit;
+   line-height: inherit;
+   color: inherit;
+   margin: 0;
+}
+button:focus,
+input:focus,
+select:focus,
+textarea:focus {
+   outline: none;
+}
+ol,
+ul {
+   list-style: none;
+   padding: 0;
+   list-style-type: none;
+   margin: 8pt 8pt 8pt 16pt;
+   color: $foreground;
+}
+ol {
+   list-style-type: decimal;
+}
+li {
+   margin-bottom: 0.625rem;
+   font-size: 1em;
+   line-height: 1.625em;
+}
+ul > li:before {
+   content: "–";
+   display: inline-block;
+   color: $primary-light;
+   position: absolute;
+   margin-left: -0.9375rem;
+}
+input[type="button"],
+input[type="submit"],
+input[type="reset"] {
+   appearance: button;
+}
+input:-webkit-autofill {
+   box-shadow: 0 0 0 100px #fff inset;
+}
