--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 
    <!-- Auth layout container -->
    <ng-container *ngSwitchCase="'AUTH'">
-      <router-outlet></router-outlet>
+      <app-auth></app-auth>
+      <!-- <router-outlet></router-outlet> -->
    </ng-container>
 
    <!-- Default layout container -->
