--- a/src/app/scss/themes/light.scss
+++ b/src/app/scss/themes/light.scss
@@ -1,4 +1,5 @@
 $primary: #764AF1;
+$primary-fr: #FFF;
 $success: aquamarine;
 $success-fr: #000;
 $primary-light: #9772FB;
@@ -6,6 +7,7 @@ $background: #FFFFFF;
 $surface-background: #f7f7f7;
 $foreground: #000000;
 $error: #F32424;
+$error-fr: #FFF;
 
 $accents-0: #FFF;
 $accents-1: #fafafa;
