--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -1,1 +1,32 @@
-<p>signup works!</p>
+<h3 class="text-center">Create an account</h3>
+
+<form class="auth-form" name="signup">
+
+   <!-- Signup email input -->
+   <div class="input-wrapper">
+      <label class="input-label" for="email-input">Email</label>
+      <input class="input-controller" type="email" name="email" id="email-input" />
+   </div>
+
+   <!-- Signup password input -->
+   <div class="input-wrapper">
+      <label class="input-label" for="password-input">Password</label>
+      <input class="input-controller" type="password" name="password" id="password-input" />
+   </div>
+   
+   <!-- Signup confirm password input -->
+   <div class="input-wrapper">
+      <label class="input-label" for="password-input">Confirm password</label>
+      <input class="input-controller" type="password" name="password" id="password-input" />
+   </div>
+
+   <app-button 
+      type="submit" 
+      color="primary" 
+      text="Signup" 
+      leftIcon="check-circle" 
+      [disabled]="false">
+   </app-button>
+</form>
+<br />
+<p class="text-center"><small>Already have account?&nbsp;<a [routerLink]="['/', 'auth', 'login']">Login</a></small></p>
