--- a/src/app/scss/themes/dark.scss
+++ b/src/app/scss/themes/dark.scss
@@ -1,4 +1,5 @@
 $primary: #764AF1;
+$primary-fr: #FFF;
 $success: aquamarine;
 $success-fr: #000;
 $primary-light: #9772FB;
@@ -6,6 +7,7 @@ $background: #000000;
 $surface-background: #1a1a1a;
 $foreground: #000000;
 $error: #F32424;
+$error-fr: #FFF;
 
 $accents-8: #fafafa;
 $accents-7: #eaeaea;
