--- a/src/app/components/loader/loader.component.scss
+++ b/src/app/components/loader/loader.component.scss
@@ -1,24 +1,48 @@
-@keyframes flash {
+@keyframes flash-light {
   0% {
     background-color: #FFF2;
-    box-shadow: 32px 0 #FFF2, -32px 0 #FFF;
+    box-shadow: 14px 0 #FFF2, -14px 0 #FFF;
   }
   50% {
     background-color: #FFF;
-    box-shadow: 32px 0 #FFF2, -32px 0 #FFF2;
+    box-shadow: 14px 0 #FFF2, -14px 0 #FFF2;
   }
   100% {
     background-color: #FFF2;
-    box-shadow: 32px 0 #FFF, -32px 0 #FFF2;
+    box-shadow: 14px 0 #FFF, -14px 0 #FFF2;
+  }
+}
+
+@keyframes flash-dark {
+  0% {
+    background-color: #0002;
+    box-shadow: 14px 0 #0002, -14px 0 #000;
+  }
+  50% {
+    background-color: #000;
+    box-shadow: 14px 0 #0002, -14px 0 #0002;
+  }
+  100% {
+    background-color: #0002;
+    box-shadow: 14px 0 #000, -14px 0 #0002;
   }
 }
 
 .app-loader {
-  width: 16px;
-  height: 16px;
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
-  background-color: #fff;
-  box-shadow: 32px 0 #fff, -32px 0 #fff;
   position: relative;
-  animation: flash 0.5s ease-out infinite alternate;
+  
+  &.loader-light {
+    background-color: #fff;
+    box-shadow: 32px 0 #fff, -32px 0 #fff;
+    animation: flash-light 0.6s ease-out infinite alternate;
+  }
+
+  &.loader-dark {
+    background-color: #000;
+    box-shadow: 32px 0 #000, -32px 0 #000;
+    animation: flash-dark 0.6s ease-out infinite alternate;
+  }
 }
