--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -24,7 +24,7 @@
          required />
    </div>
 
-   <app-button type="submit" color="primary" text="Continue" icon="arrow-right-circle" [disabled]="false"></app-button>
+   <app-button type="submit" color="primary" text="Continue" icon="arrow-right-circle" [disabled]="false" [loading]="false"></app-button>
 </form>
 <br />
 <p class="text-center"><small>Create new account?&nbsp;<a [routerLink]="['/', 'auth', 'signup']">Signup</a></small></p>
