--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -16,8 +16,8 @@
    
    <!-- Signup confirm password input -->
    <div class="input-wrapper">
-      <label class="input-label" for="password-input">Confirm password</label>
-      <input class="input-controller" type="password" name="password" id="password-input" />
+      <label class="input-label" for="confirm-password-input">Confirm password</label>
+      <input class="input-controller" type="password" id="confirm-password-input" />
    </div>
 
    <app-button 
