--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,5 +1,11 @@
-<button [attr.type]="type" [class]="buttonClasses" [attr.disabled]="disabled? true: null">
-   <i *ngIf="leftIcon.length" [class]="leftIconClasses"></i>
-   <span *ngIf="text.length" class="app-button-text">{{text}}</span>
-   <i *ngIf="icon.length" [class]="iconClasses"></i>
+<button 
+   [attr.type]="type" 
+   [class]="buttonClasses" 
+   [attr.disabled]="(disabled || loading? true: null)">
+   <app-loader *ngIf="loading" fill="dark"></app-loader>
+   <ng-container *ngIf="!loading">
+      <i *ngIf="leftIcon.length" [class]="leftIconClasses"></i>
+      <span *ngIf="text.length" class="app-button-text">{{text}}</span>
+      <i *ngIf="icon.length" [class]="iconClasses"></i>
+   </ng-container>
 </button>
