--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -36,7 +36,7 @@
          <a routerLink="/haccp/checklists" hidden>Checklists</a>
          <a routerLink="/haccp/settings" hidden>Settings</a>
          <i class="bi-check-circle-fill icon"></i>
-         <span class="label">HACCP Checklist</span>
+         <span class="label">HACCP</span>
       </a>
 
       <!-- RTS Navigation -->
